pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-cycle.ub
factory: {
  state-moves: [
    { from: resource.a, to: resource.b },
    { from: resource.b, to: resource.a },
  ]
}
